<resources>
    <string name="setup_wizard_next_button_label">Next</string>
    <string name="setup_wizard_back_button_label">Back</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="beats_audio_title">Beats Audio</string>
    <string name="usb_sd_eject">Unmount shared storage</string>
    <string name="usb_sd_eject_summary">Unmount the internal USB storage</string>
    <string name="usb_sd_insert_summary">Insert USB storage for mounting</string>
    <string name="usb_sd_mount">Mount USB storage</string>
    <string name="usb_sd_mount_summary" />
    <string name="usb_sd_format">Erase USB storage</string>
    <string name="usb_sd_format_summary">Erases all data on the internal USB storage, such as music and photos</string>
    <string name="usb_dlg_confirm_unmount_title">Unmount USB storage?</string>
    <string name="usb_dlg_confirm_unmount_text">If you unmount the USB storage, some apps you are using will stop and may be unavailable until you remount the USB storage.</string>
    <string name="usb_dlg_error_unmount_title" />
    <string name="usb_dlg_error_unmount_text">"Couldn't unmount USB storage. Try again later."</string>
    <string name="usb_unmount_inform_text">USB storage will be unmounted.</string>
    <string name="usb_sd_ejecting_title">Unmounting</string>
    <string name="usb_sd_ejecting_summary">Unmount in progress</string>
    <string name="usb_media_format_title">Erase USB storage</string>
    <string name="usb_media_format_gesture_explanation">You need to draw your unlock pattern to confirm that you want to erase the USB storage.</string>
    <string name="usb_media_format_desc">Erase all USB storage? You will lose <b>all</b> stored data!</string>
    <string name="usb_media_format_final_desc">"Erase the USB storage, deleting all files stored there? You can't reverse this action!"</string>
    <string name="usb_media_format_button_text">Erase USB storage</string>
    <string name="htc_display_htc_weather_title">HTC Weather</string>
    <string name="htc_display_htc_weather_summary">Weather for HTC Dot View</string>
    <string name="htc_quick_access_gestures_title">Motion Launch</string>
    <string name="htc_boomsound_settings_title">BoomSound</string>
    <string name="htc_boomsound_internal_speaker_summary">"BoomSound can't be turned off when using internal speakers"</string>
    <string name="htc_boomsound_not_available_format">BoomSound is not available over %1$s connections%2$s</string>
    <string name="htc_boomsound_not_available_speaker">BoomSound is not available on phone speaker</string>
    <string name="htc_boomsound_boom_bass_summary">BoomSound is not available when HTC Boom Bass is connected</string>
    <string name="htc_miracast">Miracast</string>
    <string name="htc_hdmi">HDMI</string>
    <string name="htc_in_ear">HTC In-Ear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="device_info_default">Unknown</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer.</string>
    <string name="header_category_wireless_networks">Wireless &amp; networks</string>
    <string name="header_category_connections">Connections</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_personal">Personal</string>
    <string name="header_category_access">Access</string>
    <string name="header_category_system">System</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Erase SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">Charging on AC</string>
    <string name="battery_info_status_charging_usb">Charging over USB</string>
    <string name="battery_info_status_charging_wireless">Charging wirelessly</string>
    <string name="battery_info_status_discharging">Not charging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_wireless">wireless</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="battery_info_health_cold">Cold</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (%1$s)</string>
    <string name="bluetooth_is_discoverable_always">Visible to all nearby Bluetooth devices</string>
    <string name="bluetooth_not_visible_to_other_devices">Not visible to other Bluetooth devices</string>
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <string name="bluetooth_visibility_timeout">Visibility timeout</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialing</string>
    <string name="bluetooth_lock_voice_dialing_summary">Prevent use of the bluetooth dialer when the screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_device_details">Device settings</string>
    <string name="bluetooth_profile_details">Profile settings</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bluetooth_rename_device">Rename this device</string>
    <string name="bluetooth_rename_button">Rename</string>
    <string name="bluetooth_disconnect_title">Disconnect?</string>
    <string name="bluetooth_disconnect_all_profiles">This will end your connection with:&lt;br>&lt;b>%1$s&lt;/b></string>
    <string name="bluetooth_empty_list_user_restricted">"You don't have permission to change Bluetooth settings."</string>
    <string name="sound_settings">Sound</string>
    <string name="keywords_sounds_and_notifications">speaker beep</string>
    <string name="keywords_sounds_and_notifications_interruptions">"dont don't disturb interrupt interruption break"</string>
    <string name="notification_settings">Sound &amp; notification</string>
    <string name="media_volume_option_title">Media volume</string>
    <string name="alarm_volume_option_title">Alarm volume</string>
    <string name="ring_volume_option_title">Ring volume</string>
    <string name="notification_volume_option_title">Notification volume</string>
    <string name="zen_mode_settings_title">Interruptions</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="notification_ringtone_title">Default notification ringtone</string>
    <string name="vibrate_when_ringing_title">Also vibrate for calls</string>
    <string name="notification_section_header">Notification</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="lock_screen_notifications_title">When device is locked</string>
    <string name="app_notifications_title">App notifications</string>
    <string name="other_sound_settings">Other sounds</string>
    <string name="manage_notification_access_title">Notification access</string>
    <string name="link_volume_option_title">Link ringtone &amp; notification volumes</string>
</resources>