<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/notification_settings" android:key="notification_settings" settings:keywords="@string/keywords_sounds_and_notifications"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:title="@string/sound_settings" android:key="sound">
        <com.android.settings.notification.VolumeSeekBarPreference android:icon="@drawable/ic_audio_vol_24dp" android:title="@string/media_volume_option_title" android:key="media_volume" />
        <com.android.settings.notification.VolumeSeekBarPreference android:icon="@drawable/ic_audio_alarm_24dp" android:title="@string/alarm_volume_option_title" android:key="alarm_volume" />
        <com.android.settings.notification.VolumeSeekBarPreference android:icon="@drawable/ic_audio_ring_24dp" android:title="@string/ring_volume_option_title" android:key="ring_volume" />
        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference android:title="@string/link_volume_option_title" android:key="volume_link_notification" />
        <com.android.settings.notification.VolumeSeekBarPreference android:icon="@drawable/ring_notif" android:title="@string/notification_volume_option_title" android:key="notification_volume" />
        <SwitchPreference android:persistent="false" android:title="@string/beats_audio_title" android:key="beats_audio" />
        <com.android.settings.notification.HtcBoomSoundPreference android:persistent="false" android:title="@string/htc_boomsound_settings_title" android:key="boom_sound" />
        <SwitchPreference android:persistent="false" android:title="@string/vibrate_when_ringing_title" android:key="vibrate_when_ringing" />
        <PreferenceScreen android:title="@string/zen_mode_settings_title" android:key="zen_mode" android:fragment="com.android.settings.notification.ZenModeSettings" settings:keywords="@string/keywords_sounds_and_notifications_interruptions" />
        <com.android.settings.DefaultRingtonePreference android:persistent="false" android:title="@string/ringtone_title" android:key="ringtone" android:dialogTitle="@string/ringtone_title" android:ringtoneType="ringtone" />
        <com.android.settings.DefaultRingtonePreference android:persistent="false" android:title="@string/notification_ringtone_title" android:key="notification_ringtone" android:dialogTitle="@string/notification_ringtone_title" android:ringtoneType="notification" />
        <Preference android:persistent="false" android:title="@string/other_sound_settings" android:key="other_sounds" android:fragment="com.android.settings.notification.OtherSoundSettings" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_section_header" android:key="notification">
        <SwitchPreference android:persistent="false" android:title="@string/notification_pulse_title" android:key="notification_pulse" android:switchTextOn="" android:switchTextOff="" />
        <com.android.settings.notification.DropDownPreference android:persistent="false" android:title="@string/lock_screen_notifications_title" android:key="lock_screen_notifications" />
        <PreferenceScreen android:title="@string/app_notifications_title" android:key="app_notifications" android:fragment="com.android.settings.notification.NotificationAppList" />
        <Preference android:persistent="false" android:title="@string/manage_notification_access_title" android:key="manage_notification_access" android:fragment="com.android.settings.notification.NotificationAccessSettings" />
    </PreferenceCategory>
</PreferenceScreen>